tree-sitter-abc/test/corpus/fields.txt
================================================================================
inline fields
================================================================================

X:1
K:C
CD [K:G] EF [M:3/4] GA|

--------------------------------------------------------------------------------

(source_file
  (tune
    (tune_header
      (field
        (field_key)
        (field_value))
      (key_field
        (field_key)
        (field_value)))
    (tune_body
      (music_line
        (note
          (pitch))
        (note
          (pitch))
        (inline_field
          (field_key)
          (field_value))
        (note
          (pitch))
        (note
          (pitch))
        (inline_field
          (field_key)
          (field_value))
        (note
          (pitch))
        (note
          (pitch))
        (barline)))))

================================================================================
lyric and symbol lines
================================================================================

X:1
K:C
CDEF|
w: do re mi fa
s: !p! * * *

--------------------------------------------------------------------------------

(source_file
  (tune
    (tune_header
      (field
        (field_key)
        (field_value))
      (key_field
        (field_key)
        (field_value)))
    (tune_body
      (music_line
        (note
          (pitch))
        (note
          (pitch))
        (note
          (pitch))
        (note
          (pitch))
        (barline))
      (lyric_line
        (field_key)
        (field_value))
      (symbol_line
        (field_key)
        (field_value)))))

================================================================================
voice field line in body
================================================================================

X:1
K:C
V:1
CDEF|

--------------------------------------------------------------------------------

(source_file
  (tune
    (tune_header
      (field
        (field_key)
        (field_value))
      (key_field
        (field_key)
        (field_value)))
    (tune_body
      (field
        (field_key)
        (field_value))
      (music_line
        (note
          (pitch))
        (note
          (pitch))
        (note
          (pitch))
        (note
          (pitch))
        (barline)))))

================================================================================
stylesheet directive and comment
================================================================================

X:1
%%MIDI program 1
% this is a comment
K:C
CDEF|

--------------------------------------------------------------------------------

(source_file
  (tune
    (tune_header
      (field
        (field_key)
        (field_value))
      (stylesheet_directive
        (directive_text))
      (comment
        (comment_text))
      (key_field
        (field_key)
        (field_value)))
    (tune_body
      (music_line
        (note
          (pitch))
        (note
          (pitch))
        (note
          (pitch))
        (note
          (pitch))
        (barline)))))

================================================================================
trailing comment on music line
================================================================================

X:1
K:C
CDEF| % measure one

--------------------------------------------------------------------------------

(source_file
  (tune
    (tune_header
      (field
        (field_key)
        (field_value))
      (key_field
        (field_key)
        (field_value)))
    (tune_body
      (music_line
        (note
          (pitch))
        (note
          (pitch))
        (note
          (pitch))
        (note
          (pitch))
        (barline)
        (comment
          (comment_text))))))
