tree-sitter-abc/test/corpus/notes.txt
================================================================================
notes with accidentals octaves and lengths
================================================================================

X:1
K:C
^C =D _E ^^F __G C, c' C2 C/2 C3/2 C//|

--------------------------------------------------------------------------------

(source_file
  (tune
    (tune_header
      (field
        (field_key)
        (field_value))
      (key_field
        (field_key)
        (field_value)))
    (tune_body
      (music_line
        (note
          (accidental)
          (pitch))
        (note
          (accidental)
          (pitch))
        (note
          (accidental)
          (pitch))
        (note
          (accidental)
          (pitch))
        (note
          (accidental)
          (pitch))
        (note
          (pitch)
          (octave))
        (note
          (pitch)
          (octave))
        (note
          (pitch)
          (length))
        (note
          (pitch)
          (length))
        (note
          (pitch)
          (length))
        (note
          (pitch)
          (length))
        (barline)))))

================================================================================
rests spacers and multi-measure rests
================================================================================

X:1
K:C
z x z2 x/2 y Z X Z4|

--------------------------------------------------------------------------------

(source_file
  (tune
    (tune_header
      (field
        (field_key)
        (field_value))
      (key_field
        (field_key)
        (field_value)))
    (tune_body
      (music_line
        (rest)
        (rest)
        (rest
          (length))
        (rest
          (length))
        (spacer)
        (multi_measure_rest)
        (multi_measure_rest)
        (multi_measure_rest
          (length))
        (barline)))))

================================================================================
chord and grace group
================================================================================

X:1
K:C
[CEG] {ag}f [CEG]2|

--------------------------------------------------------------------------------

(source_file
  (tune
    (tune_header
      (field
        (field_key)
        (field_value))
      (key_field
        (field_key)
        (field_value)))
    (tune_body
      (music_line
        (chord
          (note
            (pitch))
          (note
            (pitch))
          (note
            (pitch)))
        (grace_group
          (note
            (pitch))
          (note
            (pitch)))
        (note
          (pitch))
        (chord
          (note
            (pitch))
          (note
            (pitch))
          (note
            (pitch))
          (length))
        (barline)))))

================================================================================
broken rhythm tuplet slurs ties
================================================================================

X:1
K:C
C>D C<D (3CDE (CD) C-C|

--------------------------------------------------------------------------------

(source_file
  (tune
    (tune_header
      (field
        (field_key)
        (field_value))
      (key_field
        (field_key)
        (field_value)))
    (tune_body
      (music_line
        (note
          (pitch))
        (broken_rhythm)
        (note
          (pitch))
        (note
          (pitch))
        (broken_rhythm)
        (note
          (pitch))
        (tuplet)
        (note
          (pitch))
        (note
          (pitch))
        (note
          (pitch))
        (slur)
        (note
          (pitch))
        (note
          (pitch))
        (slur)
        (note
          (pitch))
        (tie)
        (note
          (pitch))
        (barline)))))
